sigtran_HEADERS = xua_types.h xua_msg.h m2ua_types.h sccp_sap.h \
		  sigtran_sap.h sccp_helpers.h mtp_sap.h osmo_ss7.h

sigtrandir = $(includedir)/osmocom/sigtran

sigtran_prot_HEADERS = protocol/sua.h protocol/m3ua.h protocol/mtp.h \
		       protocol/sccp_scmg.h
sigtran_protdir = $(includedir)/osmocom/sigtran/protocol
